Play button z-index fix

--- a/src/video-player.css
+++ b/src/video-player.css
@@ -4,7 +4,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 10;
+  z-index: 7;
   cursor: pointer;
   transition: 0.2s all ease;
 }
